--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
     "@types/chrome": "^0.0.181",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "autoprefixer": "^10.4.12",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^4.5.2",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^3.2.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
