--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "author": "mintfrog",
   "devDependencies": {
     "@types/chrome": "^0.0.181",
+    "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "autoprefixer": "^10.4.12",
