--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,5 +29,11 @@
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
+    "react-redux": "^8.0.4",
+    "redux-persist": "^6.0.0"
   }
 }
