--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "author": "mintfrog",
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/chrome": "^0.0.181",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
