--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "axios": "^1.1.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   }
