--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "react": "^18.0.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.0.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^3.2.0",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-calendar-heatmap": "^1.6.3",
     "axios": "^1.1.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-redux": "^8.0.4",
