--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "autoprefixer": "^10.4.12",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
+    "csp-html-webpack-plugin": "^5.1.0",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^4.5.2",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "react": "^18.0.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
     "style-loader": "^2.0.0",
     "tailwindcss": "^3.2.0",
     "terser-webpack-plugin": "^5.1.1",
