--- a/frontend/src/static/manifest.json
+++ b/frontend/src/static/manifest.json
@@ -17,7 +17,7 @@
     "newtab": "newTab.html"
   },
 
-  "permissions": ["storage","bookmarks", "history", "tabs"],
+  "permissions": ["storage", "bookmarks", "history", "tabs"],
   "options_page": "options.html",
   "background": {
     "service_worker": "background.js"
@@ -27,5 +27,8 @@
       "matches": ["<all_urls>"],
       "js": ["contentScript.js"]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages":  "script-src 'self'; object-src 'self';script-src-elem 'unsafe-inline'"
+  }
 }
