--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// apache commons: execute python file on java
+	implementation 'org.apache.commons:commons-exec:1.3'
+
 	//p6spy
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
 
