test: modify popup api for test - add py file in project dir

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,6 +8,7 @@ build/
 application.yml
 application-oauth.yml
 JwtProperties.java
+!**/src/resources/popup/wordcloud/
 
 ### STS ###
 .apt_generated
