--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,17 +37,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-calendar-heatmap": "^1.6.3",
     "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
-    "react-custom-scrollbars-2": "^4.5.0",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-calendar-heatmap": "^1.6.3",
     "react-beautiful-dnd": "^13.1.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-redux": "^8.0.4",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6"
   }
 }
