feat: add Jasypt and bouncycastle

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -10,6 +10,9 @@ application-oauth.yml
 JwtProperties.java
 !**/src/resources/popup/wordcloud/
 
+### Jasypt ###
+application-JASYPT.properties
+
 ### STS ###
 .apt_generated
 .classpath
