test: modify dash api (get user word cloud)

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,7 +8,8 @@ build/
 application.yml
 application-oauth.yml
 JwtProperties.java
-!**/src/resources/popup/wordcloud/
+secrets.json
+!**/src/resources/img
 
 ### STS ###
 .apt_generated
