--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -9,6 +9,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
+
+	//sonarqube
+	id "org.sonarqube" version "3.0"
 }
 
 group = 'com.limemul'
