--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,12 +42,13 @@
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
+    "moment": "^2.29.4",
     "react-beautiful-dnd": "^13.1.1",
-    "react-custom-scrollbars-2": "^4.5.0",
-    "chart.js": "^3.9.1",
     "react-chartjs-2": "^4.3.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-github-contribution-calendar": "^2.1.1",
     "react-redux": "^8.0.4",
     "react-slick": "^0.29.0",
