--- a/frontend/src/static/manifest.json
+++ b/frontend/src/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "있슈 easssue",
   "description": "실시간 이슈 확인 확장 프로그램",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "manifest_version": 3,
   "oauth2": {
     "client_id": "900377591657-g44asicjjvhlbibbhfuhjenosejli4ba.apps.googleusercontent.com",
@@ -14,7 +14,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "React Extension",
+    "default_title": "easssue",
     "default_icon": "smalllogo.png"
   },
   "chrome_url_overrides": {
