--- a/intro/nginx.conf
+++ b/intro/nginx.conf
@@ -4,6 +4,7 @@ server {
     location / {
         root    /usr/share/nginx/html;
         index   index.html;
+        server_name easssue.com
         try_files $uri $uri/ /index.html;
     }
 }
