--- a/intro/package.json
+++ b/intro/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gsap": "^3.2.1",
     "react-scripts": "5.0.1",
+    "react-scrollmagic": "^2.3.0",
+    "scrollmagic": "^2.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gsap": "^3.11.3",
+    "styled-components": "^5.3.6"
   }
 }
