--- a/intro/package.json
+++ b/intro/package.json
@@ -39,7 +39,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "gsap": "^3.11.3",
-    "styled-components": "^5.3.6"
+    "postcss": "^8.4.19",
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.2.4"
   }
 }
