--- a/frontend/src/static/manifest.json
+++ b/frontend/src/static/manifest.json
@@ -31,7 +31,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.google.com/*","https://www.naver.com/*","https://www.easssue.com/*"],
+      "matches": ["https://www.google.com/*","https://www.naver.com/*","https://www.easssue.com/*", "https://search.naver.com/*"],
       "js": ["contentScript.js"]
     }
   ]
