--- a/intro/package.json
+++ b/intro/package.json
@@ -40,8 +40,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "chart.js": "^4.0.1",
     "gsap": "^3.11.3",
     "postcss": "^8.4.19",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^4.3.1",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4"
   }
