--- a/intro/package.json
+++ b/intro/package.json
@@ -11,7 +11,9 @@
     "react-gsap": "^3.2.1",
     "react-scripts": "5.0.1",
     "react-scrollmagic": "^2.3.0",
+    "react-slick": "^0.29.0",
     "scrollmagic": "^2.0.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
